# portfolio

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  SECURITY.md  codecov.yml  package-lock.json  package.json  verify_hero.py
.changeset/: README.md  about-page-illustration.md  about-personality.md  add-agent-mascot.md  add-app-route-tests.md  add-blog-post-page-tests.md  add-cn-tests.md  add-embeddable-agent.md  add-mcp-server.md  add-page-render-tests.md  add-reduced-motion-coverage.md  add-render-tests.md  add-section-dividers.md  add-tests-for-button-and-card.md  auto-youtube-thumbnails.md  bootstrap-agent.md  bootstrap-portfolio-agent.md  bootstrap-react-testing.md  chat-resume-cta.md  config.json  cv-download.md  decommission-heroku-chatbot.md  deploy-langgraph-agent.md  dynamic-social-links.md  extend-page-coverage.md  featured-project-cards.md  fix-contact-email-click.md  fix-ub-goldwater-press-url.md  gate-404-motion-a11y.md  guardrails-safety.md  harden-frontmatter-parsing.md  harden-nginx-cache.md  harden-nginx-coop-corp.md  hero-photo.md  import-meta-glob-type.md  initial-portfolio-site.md  king-turing-thumbnail.md  minor-and-patch-group-q2-2026.md  modernize-website-design.md  nginx-bump.md  (+20 more)
.github/: dependabot.yml  pull_request_template.md
.playwright-mcp/: page-2026-05-03T21-16-24-539Z.yml  page-2026-05-03T21-17-21-671Z.yml  page-2026-05-03T21-17-32-513Z.yml
.zap/: rules.tsv
agent/: .dockerignore  Dockerfile  (+2 more)
chatbot/: .gitignore  Dockerfile  main.py  pyproject.toml
chatbot/tests/: test_main.py
(+190 files in other folders)
